# antennabench

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md  askama_fmt.toml  coverage-map-mockups.html  deny.toml  package-lock.json  package.json  vitest.config.mjs
apps/desktop/: Cargo.toml  Info.plist  build.rs  build_identity.rs  package.json  tauri.conf.json
apps/desktop/capabilities/: main-shell.json  report-reader.json
apps/desktop/frontend/: app.mjs  bridge.mjs  controller.mjs  elements.mjs  forms.mjs  index.html  models.mjs  renderers.mjs  report-compact.css  report-summary.css  report-window.css  report-window.html  report-window.mjs  report.css  state.mjs  styles.css  transitions.mjs
apps/desktop/icons/: icon.icns
apps/desktop/permissions/autogenerated/: active_session_antenna_controller.toml  active_session_conductor.toml  active_session_report.toml  active_session_wsjtx_status.toml  advance_active_session_wspr_live.toml  antenna_controller_profiles.toml  attach_active_session_antenna_controller.toml  create_session_from_review.toml  delete_antenna_controller_profile.toml  delete_managed_session.toml  export_active_session.toml  export_active_session_report.toml  export_managed_session.toml  import_active_session_rbn.toml  import_active_session_wspr_live.toml  import_managed_session.toml  list_managed_sessions.toml  load_station_preferences.toml  mutate_active_session_conductor.toml  open_managed_session.toml  open_report_window.toml  open_session_bundle.toml  refresh_active_session_report.toml  report_window_document.toml  request_station_location.toml  reveal_managed_session.toml  reveal_managed_sessions_directory.toml  review_session_setup.toml  run_active_session_antenna_controller.toml  save_antenna_controller_profile.toml  start_active_session_wsjtx.toml  stop_active_session_wsjtx.toml
apps/desktop/src/: antenna_control.rs  build_context.rs  conductor.rs  lib.rs  location.rs  main.rs  managed_sessions.rs  open_session.rs  operation_diagnostics.rs  rbn_import.rs  setup.rs  wsjtx_session.rs  wsjtx_session_record.rs  wspr_live_acquisition.rs  wspr_live_import.rs
apps/desktop/src/antenna_control/: automation.rs  commands.rs  policy.rs  process.rs  profiles.rs
apps/desktop/src/conductor/: actions.rs  live_session.rs  timing.rs  transition.rs  view.rs
apps/desktop/src/managed_sessions/: catalog.rs  tests.rs  transfer.rs
apps/desktop/src/open_session/: commands.rs  diagnostics.rs  errors.rs  projection.rs  report_window.rs  state.rs
apps/desktop/src/setup/: bundle.rs  creation.rs  e2e.rs  preferences.rs
apps/desktop/src/wsjtx_session/: commands.rs  snapshot.rs
apps/desktop/src/wspr_live_acquisition/: outcomes.rs
apps/desktop/tests/: frontend-app.test.mjs  frontend-controller.test.mjs  frontend-renderers.test.mjs  frontend-state.test.mjs
apps/desktop/tests/fixtures/: controller-catalog-v1-duplicate-names.json  fake-antenna-controller.mjs
crates/analysis/: Cargo.toml
crates/analysis/src/: activity.rs  comparison.rs  lib.rs  model.rs  resource.rs  solar.rs  summary.rs
crates/analysis/tests/: analysis_edges.rs  bundle_summaries.rs  paired_comparisons.rs  reporter_activity.rs
crates/core/: Cargo.toml
crates/core/src/: alignment.rs  diagnostics.rs  lib.rs  model.rs  normalization.rs  operator_events.rs  semantics.rs  v2.rs  v3.rs  v5_antenna_control.rs  v6.rs  validation.rs  wspr.rs  wspr_live_projection.rs
crates/core/src/v6/: diagnostic.rs
crates/core/tests/: bundle_normalization.rs  bundle_validation.rs  model_serialization.rs  operator_events_v2.rs  slot_alignment.rs  v2_types.rs  v3_signal_plans.rs
crates/propagation/: Cargo.toml
crates/propagation/src/: http.rs  lib.rs  model.rs  parse.rs
crates/propagation/tests/: acquisition.rs  parsing.rs
crates/rbn/: Cargo.toml
crates/rbn/src/: archive.rs  import.rs  lib.rs
crates/rbn/tests/: archive.rs  import.rs
crates/rbn/tests/fixtures/: synthetic-current.csv
crates/report/: Cargo.toml
crates/report/assets/: natural-earth-110m-coastline.txt
crates/report/examples/: render_canonical_sample.rs  sanitize_canonical_sample.rs  sync_desktop_report_styles.rs
crates/report/src/: answerability.rs  builder.rs  common_opportunity.rs  complementarity.rs  coverage.rs  distance.rs  geography.rs  goal_lens.rs  html.rs  lib.rs  model.rs  observed_profile.rs  resource.rs  resource_rows.rs
crates/report/src/common_opportunity/: tests.rs
crates/report/src/complementarity/: tests.rs
crates/report/src/geography/: tests.rs
crates/report/src/html/: compact.rs  evidence.rs  geometry.rs  presentation.rs  shared.rs  styles.rs  summary.rs  templates.rs
crates/report/styles/: compact-small-print.css  compact.css  coverage.css  report.css  summary-small-print.css  summary.css
crates/report/templates/report/: body_start.html  document_end.html  document_start.html  full_header.html  operational_history.html  public_document_start.html
crates/report/tests/: askama_architecture.rs  canonical_sample.rs  html_reports.rs  report_edges.rs  report_overview.rs  session_reports.rs  v2_sessions.rs  wspr_live_field_shape.rs
crates/report/tests/support/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: catalog_projection.rs  inspection.rs  lib.rs  live.rs  lossless_copy.rs  resource.rs  upgrade.rs  v2.rs  v2_attachment.rs  v3.rs
crates/storage/src/live/: attachments.rs  checkpoint.rs  control.rs  diagnostic.rs  durability.rs  error.rs  hooks.rs  (+4 more)
crates/storage/tests/: bundle_errors.rs  bundle_roundtrip.rs  golden_bundle.rs  live_persistence.rs  lock_spawn_contention.rs  lossless_copy.rs  semantic_preflight.rs  v2_bundle.rs  v3_bundle.rs  v3_live_persistence.rs
crates/wsjtx/: Cargo.toml
crates/wsjtx/src/: all_wspr.rs  import.rs  lib.rs  live.rs  protocol.rs  resource.rs  wspr_live.rs  wspr_live_activity.rs  wspr_live_alignment.rs  wspr_live_http.rs  wspr_live_observation.rs  wspr_live_reporter.rs
crates/wsjtx/tests/: all_wspr_import.rs  live_udp.rs  wspr_live_acquisition.rs  wspr_live_activity.rs  wspr_live_import.rs
(+348 files in other folders)
