[workspace]
members = ["apps/desktop", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rwjblue/antennabench"

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde", "std"] }
insta = { version = "1.48.0", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tauri = { version = "2.11.5", features = [] }
tauri-build = { version = "2.6.3", features = [] }
tempfile = "3.10.1"
thiserror = "1.0.63"
