[workspace]
members = ["apps/desktop", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96.1"
license = "Apache-2.0"
repository = "https://github.com/rwjblue/antennabench"
publish = false

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde", "std"] }
insta = { version = "1.48.0", features = ["json"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
tauri-build = { version = "2.6.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tempfile = "3.10.1"
thiserror = "2.0.18"
uuid = { version = "1.23.5", features = ["v4"] }
