[workspace]
members = ["apps/desktop", "crates/*"]
resolver = "2"

# Full debuginfo roughly triples target/ size and slows compiles and links;
# line tables keep file:line in backtraces, which is all tests need.
[profile.dev]
debug = "line-tables-only"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96.1"
license = "Apache-2.0"
repository = "https://github.com/rwjblue/antennabench"
publish = false

[workspace.dependencies]
askama = "0.16.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde", "std"] }
csv = "1.4.0"
insta = { version = "1.48.0", features = ["json"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
tauri-build = { version = "2.6.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tempfile = "3.10.1"
thiserror = "2.0.18"
trash = "5.2.6"
uuid = { version = "1.23.5", features = ["v4"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[workspace.dependencies.objc2]
version = "0.6.4"
default-features = false
features = ["std"]

[workspace.dependencies.objc2-core-location]
version = "0.3.2"
default-features = false
features = ["CLLocation", "CLLocationManager", "CLLocationManagerDelegate", "CLError"]

[workspace.dependencies.objc2-foundation]
version = "0.3.2"
default-features = false
features = ["NSArray", "NSDate", "NSError", "NSObject", "NSRunLoop"]
