[package]
name = "antennabench-desktop"
description = "Offline desktop shell for AntennaBench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "antennabench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
antennabench-analysis = { path = "../../crates/analysis" }
antennabench-core = { path = "../../crates/core" }
antennabench-report = { path = "../../crates/report" }
antennabench-storage = { path = "../../crates/storage" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
