[package]
name = "antennabench-desktop"
description = "Offline desktop shell for AntennaBench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
name = "antennabench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
antennabench-analysis = { path = "../../crates/analysis" }
antennabench-core = { path = "../../crates/core" }
antennabench-report = { path = "../../crates/report" }
antennabench-rbn = { path = "../../crates/rbn" }
antennabench-storage = { path = "../../crates/storage" }
antennabench-wsjtx = { path = "../../crates/wsjtx" }
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
thiserror.workspace = true
trash.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-core-location.workspace = true
objc2-foundation.workspace = true

[dev-dependencies]
tempfile.workspace = true
