[package]
name = "antennabench-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
antennabench-core = { path = "../core" }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
antennabench-storage = { path = "../storage" }
insta = { workspace = true }
serde_json = { workspace = true }
