[package]
name = "antennabench-rbn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
antennabench-core = { path = "../core" }
chrono = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
