[package]
name = "antennabench-wsjtx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
antennabench-core = { path = "../core" }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
antennabench-storage = { path = "../storage" }
insta = { workspace = true }
tempfile = { workspace = true }
